src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F821_F821_1.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedName: Model
  location:
    row: 11
    column: 9
  end_location:
    row: 11
    column: 16
  fix: ~
  parent: ~
- kind:
    UndefinedName: Model
  location:
    row: 18
    column: 16
  end_location:
    row: 18
    column: 23
  fix: ~
  parent: ~
- kind:
    UndefinedName: Model
  location:
    row: 24
    column: 12
  end_location:
    row: 24
    column: 19
  fix: ~
  parent: ~
- kind:
    UndefinedName: Model
  location:
    row: 30
    column: 10
  end_location:
    row: 30
    column: 17
  fix: ~
  parent: ~

