src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F822_F822.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedExport: b
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix: ~
  parent: ~

