src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F823_F823.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedLocal: my_var
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 10
  fix: ~
  parent: ~

