src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F841_F841_1.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UnusedVariable: x
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 5
  fix: ~
  parent: ~
- kind:
    UnusedVariable: y
  location:
    row: 6
    column: 7
  end_location:
    row: 6
    column: 8
  fix: ~
  parent: ~
- kind:
    UnusedVariable: coords
  location:
    row: 16
    column: 13
  end_location:
    row: 16
    column: 19
  fix: ~
  parent: ~
- kind:
    UnusedVariable: coords
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 10
  fix: ~
  parent: ~
- kind:
    UnusedVariable: a
  location:
    row: 24
    column: 5
  end_location:
    row: 24
    column: 6
  fix: ~
  parent: ~
- kind:
    UnusedVariable: b
  location:
    row: 24
    column: 8
  end_location:
    row: 24
    column: 9
  fix: ~
  parent: ~
- kind:
    UnusedVariable: x
  location:
    row: 24
    column: 14
  end_location:
    row: 24
    column: 15
  fix: ~
  parent: ~
- kind:
    UnusedVariable: y
  location:
    row: 24
    column: 17
  end_location:
    row: 24
    column: 18
  fix: ~
  parent: ~

